--- a/analytics.html
+++ b/analytics.html
@@ -406,39 +406,39 @@
                                 </button>
                                 <ul id="dropdown-pages" class="hidden py-2 space-y-2">
                                     <li>
-                                        <a href="user-details.html"
+                                        <a href="/user-details.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">User
                                             Details
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="user-info.html"
+                                        <a href="/user-info.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">User
                                             Info
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="recharge-log.html"
+                                        <a href="/recharge-log.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Recharge
                                             Log
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="withdrawal-log.html"
+                                        <a href="/withdrawal-log.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Withdrawal
                                             Log
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="game-record.html"
+                                        <a href="/game-record.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
                                             Record
                                         </a>
                                     </li>
 
                                     <li>
-                                        <a href="phone-otp.html"
+                                        <a href="/phone-otp.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Phone
                                             OTP
                                         </a>
@@ -458,8 +458,8 @@
                                             <path d="M13.5 10.5H21A7.5 7.5 0 0 0 13.5 3z" />
                                         </g>
                                     </svg>
-                                    <span class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white">Highest
-                                        Top-Up</span>
+                                    <span
+                                        class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white">Performance</span>
                                     <svg aria-hidden="true" class="w-6 h-6 group-hover:text-white" fill="currentColor"
                                         viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                         <path fill-rule="evenodd"
@@ -469,50 +469,28 @@
                                 </button>
                                 <ul id="dropdown-topUp" class="hidden py-2 space-y-2">
                                     <li>
-                                        <a href="unreg-number.html"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white truncate">Unregistered
-                                            Numbers</a>
+                                        <a href="/highest-topup.html"
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white truncate">Highest
+                                            Top Up</a>
                                     </li>
                                     <li>
-                                        <a href="top-gamers.html"
+                                        <a href="/top-gamers.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Top
                                             Gamers</a>
                                     </li>
                                     <li>
-                                        <a href="inactive-numbers.html"
+                                        <a href="/unreg-number.html"
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white truncate">Unregistered
+                                            Numbers</a>
+                                    </li>
+                                    <li>
+                                        <a href="/inactive-numbers.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inactice
                                             Numbers</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li>
-                                <button type="button"
-                                    class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
-                                    aria-controls="dropdown-authentication"
-                                    data-collapse-toggle="dropdown-authentication">
-                                    <svg xmlns="http://www.w3.org/2000/svg"
-                                        class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
-                                        viewBox="0 0 256 256">
-                                        <path fill="currentColor"
-                                            d="M220.69 100.17a12 12 0 0 0-9.85 13.83a85 85 0 0 1 1.16 14a83.57 83.57 0 0 1-18 51.94a83.5 83.5 0 0 0-29-23.42a52 52 0 1 0-74 0a83.5 83.5 0 0 0-29 23.42A83.94 83.94 0 0 1 128 44a85 85 0 0 1 14 1.16a12 12 0 0 0 4-23.67A108.1 108.1 0 0 0 20 128a108 108 0 0 0 216 0a109 109 0 0 0-1.49-18a12 12 0 0 0-13.82-9.83M100 120a28 28 0 1 1 28 28a28 28 0 0 1-28-28m-20.43 76.57a60 60 0 0 1 96.86 0a83.72 83.72 0 0 1-96.86 0M240.49 48.49l-32 32a12 12 0 0 1-17 0l-16-16a12 12 0 0 1 17-17L200 55l23.51-23.52a12 12 0 1 1 17 17Z" />
-                                    </svg>
-                                    <span class="flex-1 ml-3 text-left whitespace-nowrap group-hover:text-white">Agent
-                                        Model</span>
-                                    <svg aria-hidden="true" class="w-6 h-6 group-hover:text-white" fill="currentColor"
-                                        viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                </button>
-                                <ul id="dropdown-authentication" class="hidden py-2 space-y-2">
-                                    <li>
-                                        <a href="add-agent.html"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Add
-                                            Agent</a>
-                                    </li>
-                                </ul>
-                            </li>
+
                             <li>
                                 <button type="button"
                                     class="flex items-center p-2 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white"
@@ -535,31 +513,43 @@
                                 </button>
                                 <ul id="dropdown-customer" class="hidden py-2 space-y-2">
                                     <li>
-                                        <a href="inbox.html"
+                                        <a href="/inbox.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Inbox</a>
                                     </li>
                                     <li>
-                                        <a href="#"
+                                        <a href="/"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Live
                                             Chat</a>
                                     </li>
                                     <li>
-                                        <a href="email.html"
+                                        <a href="/email.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Email</a>
                                     </li>
                                     <li>
-                                        <a href="phone-number.html"
+                                        <a href="/phone-number.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Phone
                                             Number</a>
                                     </li>
                                     <li>
-                                        <a href="phone-number.html"
+                                        <a href="/phone-number.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Telegram</a>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="receipt.html"
+                                <a href="/agent-model.html"
+                                    class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                        class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
+                                        viewBox="0 0 256 256">
+                                        <path fill="currentColor"
+                                            d="M220.69 100.17a12 12 0 0 0-9.85 13.83a85 85 0 0 1 1.16 14a83.57 83.57 0 0 1-18 51.94a83.5 83.5 0 0 0-29-23.42a52 52 0 1 0-74 0a83.5 83.5 0 0 0-29 23.42A83.94 83.94 0 0 1 128 44a85 85 0 0 1 14 1.16a12 12 0 0 0 4-23.67A108.1 108.1 0 0 0 20 128a108 108 0 0 0 216 0a109 109 0 0 0-1.49-18a12 12 0 0 0-13.82-9.83M100 120a28 28 0 1 1 28 28a28 28 0 0 1-28-28m-20.43 76.57a60 60 0 0 1 96.86 0a83.72 83.72 0 0 1-96.86 0M240.49 48.49l-32 32a12 12 0 0 1-17 0l-16-16a12 12 0 0 1 17-17L200 55l23.51-23.52a12 12 0 1 1 17 17Z" />
+                                    </svg>
+                                    <span class="ml-3">Agent Modal</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/receipt.html"
                                     class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                         class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -571,7 +561,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="games.html"
+                                <a href="/games.html"
                                     class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                         class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -583,7 +573,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="fraud.html"
+                                <a href="/fraud.html"
                                     class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                         class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -596,7 +586,7 @@
                             </li>
 
                             <li>
-                                <a href="user-settings.html"
+                                <a href="/user-settings.html"
                                     class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                         class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
