--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
             },
         };
     </script>
-    <title>Pixel: Dashboard</title>
+    <title>Login</title>
 </head>
 
 <body>
@@ -48,8 +48,8 @@
             </div>
 
             <div class="flex">
-                <a class="text-gray-500 hover:text-gray-900 text-xs lg:text-sm" href="">Forgot password? <span
-                        class="text-primary font-medium">Reset</span></a>
+                <p class="text-gray-500 text-xs lg:text-sm">Forgot
+                    password? <a href="/reset-password.html" class="text-primary font-medium">Reset</a></p>
             </div>
 
         </div>
