--- a/email.html
+++ b/email.html
@@ -611,13 +611,13 @@
             Email
           </h1>
           <div class="p-4 bg-white dark:bg-dark200 rounded-lg lg:mb-4">
-            <h2 class="mb-10 text-gray-900 dark:text-white font-semibold text-center text-base lg:text-xl">Add email to
+            <h2 class="mb-10 text-gray-800 dark:text-white font-semibold text-center text-base lg:text-xl capitalize">
+              Add email to
               dashboard
             </h2>
             <form class="max-w-sm mx-auto flex flex-col items-center" action="">
               <div class="flex flex-row items-center justify-between w-full">
-                <label for="email"
-                  class="basis-1/4 block mb-2 text-sm font- text-gray-900 dark:text-white">Email:</label>
+                <label for="email" class="basis-1/4 block text-sm text-gray-900 dark:text-white">Email:</label>
                 <div class="relative w-full">
                   <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                     <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
@@ -681,7 +681,6 @@
       </main>
     </div>
   </main>
-  <script src="/js/app.js"></script>
 </body>
 
 </html>
