--- a/games.html
+++ b/games.html
@@ -622,30 +622,30 @@
             <!-- Dashboard -->
             <main class="p-4 md:ml-64 min-h-screen pt-20">
                 <div class="p-2 bg-white dark:bg-dark200 rounded-lg mb-4">
-                    <ul class="flex flex-row items-center justify-between -mb-px text-sm font-medium text-center"
+                    <ul class="flex flex-row items-center justify-between gap-2 lg:gap-4 -mb-px text-sm font-medium text-center"
                         id="default-styled-tab" data-tabs-toggle="#default-styled-tab-content"
                         data-tabs-active-classes="text-white bg-primary focus:outline-none border-none"
                         data-tabs-inactive-classes="hover:bg-primary hover:text-white transition duration-300 ease-in-out dark:text-white"
                         role="tablist">
-                        <li class="me-2 w-full" role="presentation">
+                        <li class="w-full" role="presentation">
                             <button
                                 class="inline-block p-2.5 border rounded-lg border-gray-300 hover:border-none duration-300 w-full"
                                 id="ludo-styled-tab" data-tabs-target="#styled-ludo" type="button" role="tab"
                                 aria-controls="ludo" aria-selected="false">Ludo</button>
                         </li>
-                        <li class="me-2 w-full" role="presentation">
+                        <li class="w-full" role="presentation">
                             <button
                                 class="inline-block p-2.5 border rounded-lg border-gray-300 hover:border-none duration-300 w-full"
                                 id="spin-styled-tab" data-tabs-target="#styled-spin" type="button" role="tab"
                                 aria-controls="spin" aria-selected="false">Spin</button>
                         </li>
-                        <li class="me-2 w-full" role="presentation">
+                        <li class="w-full" role="presentation">
                             <button
                                 class="inline-block p-2.5 border rounded-lg border-gray-300 hover:border-none duration-300 w-full"
                                 id="soccer-styled-tab" data-tabs-target="#styled-soccer" type="button" role="tab"
                                 aria-controls="soccer" aria-selected="false">Soccer</button>
                         </li>
-                        <li class="me-2 w-full" role="presentation">
+                        <li class="w-full" role="presentation">
                             <button
                                 class="inline-block p-2.5 border rounded-lg border-gray-300 hover:border-none duration-300 w-full"
                                 id="fish-styled-tab" data-tabs-target="#styled-fish" type="button" role="tab"
