--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
             <div class="flex items-center">
                 <img src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1717864716/pnl-logo_at49qu.png"
                     class="mr-3 h-8 lg:h-10" alt="loading" />
-                <h1 class="text-xl lg:text-3xl font-semibold text-primary tracking-tight">
+                <h1 class="text-lg lg:text-2xl font-semibold text-primary tracking-tight capitalize">
                     Pixel network Limited
                 </h1>
             </div>
