--- a/user-details.html
+++ b/user-details.html
@@ -968,7 +968,7 @@
                         d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                     </svg>
                     <h3 class="mb-3 text-lg font-semibold text-gray-700 dark:text-white">
-                      Amount Deleted
+                      Deduct Coin
                     </h3>
                     <p class="text-gray-700 dark:text-white">
                       Enter the amount you want to deduct
@@ -1016,7 +1016,7 @@
                         d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                     </svg>
                     <h3 class="mb-3 text-lg font-semibold text-gray-700 dark:text-white">
-                      Amount Deleted
+                      Deduct Cash
                     </h3>
                     <p class="text-gray-700 dark:text-white">
                       Enter the amount you want to deduct
