--- a/index.html
+++ b/index.html
@@ -178,12 +178,14 @@
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"></path>
+                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z">
+                        </path>
                       </svg>
                     </div>
                     <div>
                       <p class="dark:text-white text-gray-900 text-sm">Info Window</p>
-                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user PG1100011
+                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user
+                        PG1100011
                         account.
                         Kindly look into
                         it</p>
@@ -204,12 +206,14 @@
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"></path>
+                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z">
+                        </path>
                       </svg>
                     </div>
                     <div>
                       <p class="dark:text-white text-gray-900 text-sm">Info Window</p>
-                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user PG1100011
+                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user
+                        PG1100011
                         account.
                         Kindly look into
                         it</p>
@@ -230,12 +234,14 @@
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"></path>
+                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z">
+                        </path>
                       </svg>
                     </div>
                     <div>
                       <p class="dark:text-white text-gray-900 text-sm">Info Window</p>
-                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user PG1100011
+                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user
+                        PG1100011
                         account.
                         Kindly look into
                         it</p>
@@ -256,12 +262,14 @@
                       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"></path>
+                          d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z">
+                        </path>
                       </svg>
                     </div>
                     <div>
                       <p class="dark:text-white text-gray-900 text-sm">Info Window</p>
-                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user PG1100011
+                      <p class="text-gray-500 leading-tight">A fraud issue was detected on user
+                        PG1100011
                         account.
                         Kindly look into
                         it</p>
@@ -754,7 +762,7 @@
                       src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
                       alt="loading" />
                     <div class="ps-3">
-                      <div class="text-base font-medium">Neil Sims</div>
+                      <div class="text-sm font-medium">Neil Sims</div>
                     </div>
                   </th>
                   <td class="px-6 py-2">
@@ -772,7 +780,7 @@
                       src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
                       alt="loading" />
                     <div class="ps-3">
-                      <div class="text-base font-medium">Bonnie Green</div>
+                      <div class="text-sm font-medium">Bonnie Green</div>
                     </div>
                   </th>
                   <td class="px-6 py-2">
@@ -790,7 +798,7 @@
                       src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
                       alt="loading" />
                     <div class="ps-3">
-                      <div class="text-base font-medium">Jese Leos</div>
+                      <div class="text-sm font-medium">Jese Leos</div>
                     </div>
                   </th>
                   <td class="px-6 py-2">
@@ -808,7 +816,7 @@
                       src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
                       alt="loading" />
                     <div class="ps-3">
-                      <div class="text-base font-medium">Thomas Lean</div>
+                      <div class="text-sm font-medium">Thomas Lean</div>
                     </div>
                   </th>
                   <td class="px-6 py-2">
@@ -825,7 +833,7 @@
                       src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
                       alt="loading" />
                     <div class="ps-3">
-                      <div class="text-base font-medium">
+                      <div class="text-sm font-medium">
                         Leslie Livingston
                       </div>
                     </div>
@@ -845,7 +853,7 @@
                       src="https://res.cloudinary.com/dyvmtgjer/image/upload/v1715243152/image1_r7ytfh.png"
                       alt="loading" />
                     <div class="ps-3">
-                      <div class="text-base font-medium">Bonnie Green</div>
+                      <div class="text-sm font-medium">Bonnie Green</div>
                     </div>
                   </th>
                   <td class="px-6 py-2">
