--- a/phone-number.html
+++ b/phone-number.html
@@ -612,13 +612,14 @@
             Phone Number
           </h1>
           <div class="p-4 bg-white dark:bg-dark200 rounded-lg lg:mb-4">
-            <h2 class="mb-10 text-gray-900 dark:text-white font-semibold text-center text-base lg:text-xl">Add phone
+            <h2 class="mb-10 text-gray-800 dark:text-white font-semibold text-center text-base lg:text-xl capitalize">
+              Add phone
               number to
               dashboard
             </h2>
             <form class="max-w-sm mx-auto flex flex-col items-center" action="">
               <div class="flex flex-row items-center justify-between w-full">
-                <label for="phone" class="basis-1/4 block mb-2 text-sm font- text-gray-900 dark:text-white">Phone
+                <label for="phone" class="basis-1/4 block text-sm text-gray-900 dark:text-white">Phone
                   No:</label>
                 <div class="relative w-full">
                   <div class="absolute inset-y-0 start-0 top-0 flex items-center ps-3.5 pointer-events-none">
@@ -681,8 +682,6 @@
 
     </div>
   </main>
-  <script src="/js/app.js"></script>
-  <script src="/js/data.js"></script>
 </body>
 
 </html>
