--- a/top-gamers.html
+++ b/top-gamers.html
@@ -632,22 +632,22 @@
           </div>
           <div class="flex flex-col">
             <!-- make each button have an active  -->
-            <div class="p-2 bg-white dark:bg-dark200 rounded-lg mb-4 flex items-center justify-between">
+            <div class="p-2 bg-white dark:bg-dark200 rounded-lg mb-4 flex items-center justify-between gap-2 lg:gap-4">
               <button type="button"
-                class="text-gray-600 bg-white border border-gray-300 focus:outline-none hover:bg-primary hover:text-white hover:border-none font-medium rounded-lg text-xs px-4 py-2.5 me-2 uppercase transition duration-300 ease-in-out w-full">
+                class="text-gray-600 bg-white border border-gray-300 focus:outline-none hover:bg-primary hover:text-white hover:border-none font-medium rounded-lg text-xs px-4 py-2.5 uppercase transition duration-300 ease-in-out w-full">
                 ludo
               </button>
 
               <button type="button"
-                class="text-gray-600 bg-white border border-gray-300 focus:outline-none hover:bg-primary hover:text-white hover:border-none font-medium rounded-lg text-xs px-4 py-2.5 me-2 uppercase transition duration-300 ease-in-out w-full">
+                class="text-gray-600 bg-white border border-gray-300 focus:outline-none hover:bg-primary hover:text-white hover:border-none font-medium rounded-lg text-xs px-4 py-2.5 uppercase transition duration-300 ease-in-out w-full">
                 spin
               </button>
               <button type="button"
-                class="text-gray-600 bg-white border border-gray-300 focus:outline-none hover:bg-primary hover:text-white hover:border-none font-medium rounded-lg text-xs px-4 py-2.5 me-2 uppercase transition duration-300 ease-in-out w-full">
+                class="text-gray-600 bg-white border border-gray-300 focus:outline-none hover:bg-primary hover:text-white hover:border-none font-medium rounded-lg text-xs px-4 py-2.5 uppercase transition duration-300 ease-in-out w-full">
                 fish
               </button>
               <button type="button"
-                class="text-gray-600 bg-white border border-gray-300 focus:outline-none hover:bg-primary hover:text-white hover:border-none font-medium rounded-lg text-xs px-4 py-2.5 me-2 uppercase transition duration-300 ease-in-out w-full">
+                class="text-gray-600 bg-white border border-gray-300 focus:outline-none hover:bg-primary hover:text-white hover:border-none font-medium rounded-lg text-xs px-4 py-2.5 uppercase transition duration-300 ease-in-out w-full">
                 soccer
               </button>
             </div>
